<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BotConf</string>

    <string name="agenda_filter_congress">Congress</string>
    <string name="agenda_filter_track">Track</string>
    <string name="agenda_filter_tag">Tag</string>
    <string name="filter">Filter</string>
    <string name="slides">Slides</string>
    <string name="video">Video</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_venue">Venue</string>
    <string name="action_sponsors">Sponsors</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_followus">Follow us</string>
    <string name="action_video">Video</string>
    <string name="action_web">Web</string>

    <string name="tab_archive">Archive</string>
    <string name="tab_talks">Talks</string>
    <string name="tab_favourites">Favs</string>
    <string name="tab_twitter">Twitter</string>

    <string name="snackbar_loading_agenda">Loading Programme</string>

    <string name="snackbar_programme_updated">Programme Updated</string>

    <string name="add_to_favorites">Add to Favourites</string>
    <string name="action_add_to_favorites">Add to Favourites</string>
    <string name="action_remove_from_favorites">Remove from Favourites</string>

    <string name="remove_from_favorites">Remove from favourites</string>


    <string name="email_subject">Conference Android App Feedback</string>

    <string name="snackbar_no_email_client_available">No email clients available</string>
    <string name="snackbar_install_a_maps_application">Please install a maps application</string>

</resources>
