<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.botconf.MainActivity">

    <item
        android:id="@+id/action_venue"
        android:orderInCategory="1"
        android:title="@string/action_venue"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sponsors"
        android:orderInCategory="2"
        android:title="@string/action_sponsors"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="3"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="4"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_followus"
        android:orderInCategory="5"
        android:title="@string/action_followus"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_video"
        android:orderInCategory="6"
        android:title="@string/action_video"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web"
        android:orderInCategory="6"
        android:title="@string/action_web"
        app:showAsAction="never" />








</menu>
